created and design the navbar components and intro component

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -47,6 +47,36 @@
   gap: 0rem;
 }
 
+.i-icons>*{
+  transform: scale(0.5);
+}
+.i-icons>*:hover{
+  cursor: pointer;
+}
+
 .i-right{
   flex: 1;
+  position: relative;
+}
+
+.i-right>*{
+  position: absolute;
+  z-index: 1;
+}
+
+.i-right>:nth-child(1){
+  transform: scale(0.69);
+  left: -15%;
+  top: -9%;
+}
+
+.i-right>:nth-child(2){
+  transform: scale(0.67);
+  left: -3rem;
+  top: -4.6rem;
+}
+
+.i-right>:nth-child(3){
+  transform: scale(1.7);
+  top: -9%;
 }
